--- a/Projektmappe (Nico)/DigiSim/DigiSim/DigiSim.csproj
+++ b/Projektmappe (Nico)/DigiSim/DigiSim/DigiSim.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AndGate.cs" />
+    <Compile Include="Connection.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,9 +55,15 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GateObject.cs" />
+    <Compile Include="GND.cs" />
+    <Compile Include="LED.cs" />
+    <Compile Include="Not.cs" />
+    <Compile Include="OrGate.cs" />
+    <Compile Include="Pin.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="switch.cs" />
+    <Compile Include="VCC.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
