--- a/Projektmappe (Nico)/DigiSim/DigiSim/DigiSim.csproj
+++ b/Projektmappe (Nico)/DigiSim/DigiSim/DigiSim.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AndGate.cs" />
+    <Compile Include="ChangeInput.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeInput.Designer.cs">
+      <DependentUpon>ChangeInput.cs</DependentUpon>
+    </Compile>
     <Compile Include="Connection.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -64,6 +70,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="switch.cs" />
     <Compile Include="VCC.cs" />
+    <EmbeddedResource Include="ChangeInput.resx">
+      <DependentUpon>ChangeInput.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
